...
                android:layout_height="wrap_content"
                android:textCursorDrawable="@null"/>
        </com.google.android.material.textfield.TextInputLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/employee_rv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            tools:listitem="@layout/item_kos" />

    </LinearLayout>
...
