...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nohpdata"
            app:layout_constraintVertical_bias="0.105" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_transaksi"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginHorizontal="40dp"
                android:backgroundTint="@color/colorPrimary"
                android:hint="Book"
...
